# tutorial

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
doc/: .gitignore  Makefile  abstract.tex  preamble.tex  tutorial.nw
src/: .gitignore
src/pytorial/: Makefile  catalog.nw  cli.nw  model.nw  run.nw  shell.nw  state.nw  tutorial.nw
src/pytorial/tutorials/: shell-basics.nw  using-tutorials.nw  writing-tutorials.nw
src/tutorial/: Makefile  catalog.nw  cli.nw  model.nw  run.nw  shell.nw  state.nw  tutorial.nw
src/tutorial/tutorials/: Makefile  shell-basics.md  using-tutorials.md  writing-tutorials.md
tests/: Makefile
tutorials/: shell-basics.md
