[project]
name = "pytorial"
version = "0.2"
description = "Interactive command-line tutorials with PTY-backed steps"
license = "MIT"
readme = "README.md"
authors = [
  {name = "Daniel Bosk", email = "daniel@bosk.se"}
]
maintainers = [
  {name = "Daniel Bosk", email = "dbosk@kth.se"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Education",
  "Topic :: Education"
]
requires-python = ">=3.10"
dependencies = [
  "platformdirs>=4",
  "PyYAML>=6",
  "rich>=12.3.0",
  "typer>=0.9.0"
]

[project.scripts]
tutorial = "pytorial.cli:app"
pytorial = "pytorial.cli:app"

[project.urls]
repository = "https://github.com/dbosk/tutorial"
"Bug Tracker" = "https://github.com/dbosk/tutorial/issues"

[tool.poetry]
packages = [{include = "pytorial", from = "src"}]
include = [
  {path = "src/**/*.py", format = "wheel"},
  {path = "src/pytorial/tutorials/*.md", format = ["sdist", "wheel"]},
]
exclude = [
  "src/pytorial/.gitignore",
  "src/pytorial/Makefile",
  "src/pytorial/*.nw",
  "src/pytorial/*.tex",
  "src/pytorial/ltxobj",
  "src/pytorial/tutorials/Makefile",
  "src/pytorial/tutorials/*.nw",
  "src/pytorial/tutorials/*.tex",
  "src/pytorial/tutorials/ltxobj",
]

[tool.black]
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest>=7.4"
]
